finish navigation section

--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
     <title>B8A2-Gamer-zone</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- start header section -->
-    <header>
-        <h1>B8A2-Gamer-zone</h1>
+    <header class="Gamer-header">
+        <nav class="gamer-nav">
+            <div class="gamer-nav-container">
+                <div class="gamer-logo">
+                    <img src="/images/Frame.png" alt="">
+                    <h3 class="gamer-title"><span class="gamer-g">G</span>amer</h3>
+                </div>
+                <div class="gamer-content">
+                        <ul>
+                            <li><a href="">About Us</a></li>
+                            <li><a href="">Developers</a></li>
+                            <li class="gamer-follow">
+                                <span>Follow Us On</span>
+                                <span><i class="fa-brands fa-youtube fa-2xl" style="color: #f02d2d;"></i></span>
+                                <span><i class="fa-brands fa-tiktok"></i></span>
+                            </li>
+                        </ul> 
+                </div>
+            </div>
+
+        </nav>
+        
     </header>
     <!-- Header section end -->
     <!-- main section start  -->
