banner section finish

--- a/index.html
+++ b/index.html
@@ -29,8 +29,22 @@
                         </ul> 
                 </div>
             </div>
-
         </nav>
+        <!-- Nav bar end -->
+        <div class="gamer-banner">
+            <div class="gamer-banner-content">
+                <h2 class="gamer-banner-title">Play Like The</h2>
+                <h1 class="gamer-banner-animal">g.o.a.t.</h1>
+                <p class="gamer-banner-description">1-Click instant play</p>
+                <p class="gamer-banner-description">No Download</p>
+                <p class="gamer-banner-description">1000s of supported online games</p>
+                <button class="signin">SIGN IN</button>
+                <button class="gorough">GO ROUGH</button>
+            </div>
+            <div class="gamer-banner-images">
+                <img width="540px" src="/images/Group 18.png" alt="">
+            </div>
+        </div>
         
     </header>
     <!-- Header section end -->
