fix some issues in team section"

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- main section start  -->
     <main>
         <!-- we are gamer section -->
-        <section class="gamer-teams-container">
+        <section class="gamer-teams">
             <div class="gamer-teams-container">
               <div class="gamer-teams-img">
                 <img src="/images/pngwing 4.png" alt="">
@@ -66,8 +66,10 @@
                 <h3 class="gamer-teams-title">We are gamer</h3>
                 <p class="gamer-teams-description">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
                 <button class="btn-gamer-know"> know more</button>
-                <p class="gamer-teams-purpose"> <span class="gamer-teams-purpose-1">Our purpose...</span><br>
-                    <span class="gamer-teams-purpose-2">“unleash the gamer in everyone”</span></p>
+                <p class="gamer-teams-purpose"> 
+                    <span class="gamer-teams-purpose-1">Our purpose...</span><br>
+                    <span class="gamer-teams-purpose-2">“unleash the gamer in everyone”</span>
+                </p>
               </div>                        
             </div>
 
