finish play section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,29 @@
 
 
         </section>
+<!-- play instantly section start -->
+        <section class="gamer-play-section">
+                <div class="gamer-play-container">
+                    <div class="gamer-play-content">
+                        <h4 class="gamer-play-title"> <span class="gamer-play-title-color">Play Instantly,</span> <br>
+                            No Downloads <br>
+                            No Installs.</h4>
+                            <p class="gamer-play-description">Play games online for free without <br>downloading. Just click the Play button <br> and play instantly in your browser.</p>
+                    </div>
+                    <div class="gamer-play-images">
+                        <div class="img-1">
+                            <img src="/images/Rectangle 55.png" alt="">
+
+                        </div>
+                        <div class="img-2">
+                            <img src="/images/Rectangle 66.png" alt="">
+
+                        </div>
+                    </div>
+                </div>
+
+        </section>
+        
     </main>
     <!-- main section end -->
     <!-- footer section start  -->
