--- a/index.html
+++ b/index.html
@@ -135,11 +135,82 @@
                 </div>
 
         </section>
+
+        <!-- action  section -->
+        <section class="gamer-action">
+            <div class="gamer--action-container">
+                <div class="gamer-action-box">
+                    <img src="/images/Rectangle 11.png" alt=""> <p>Action Games</p>
+                </div>
+                <div class="gamer-action-box">
+                    <img src="/images/Rectangle 12.png" alt=""> <p>Adventure Games</p>
+                </div>
+                <div class="gamer-action-box">
+                    <img src="/images/Rectangle 13.png" alt=""> <p>Arcade Games</p>
+                </div>
+                <div class="gamer-action-box">
+                    <img src="/images/Rectangle 14.png" alt=""> <p>Educational Games</p>
+                </div>
+                <div class="gamer-action-box">
+                    <img src="/images/Rectangle 15.png" alt=""> <p>Word Games</p>
+                </div>
+                <div class="gamer-action-box">
+                    <img src="/images/Rectangle 16.png" alt=""> <p>Role Palying Games</p>
+                </div>
+                <div class="gamer-action-box">
+                    <img src="/images/Rectangle 17.png" alt=""> <p>Music & Audio Games</p>
+                </div>
+                <div class="gamer-action-box">
+                    <img src="/images/Rectangle 18.png" alt=""> <p>Puzzle Games</p>
+                </div>
+                <div class="gamer-action-box">
+                    <img src="/images/Rectangle 19.png" alt=""> <p>Strategy Games</p>
+                </div>
+            </div>
+        </section>
         
     </main>
     <!-- main section end -->
     <!-- footer section start  -->
-    <footer>
+    <footer class="footer">
+        <div class="gamer-logo">
+            <img src="/images/Frame.png" alt="">
+            <h3 class="gamer-title-footer"><span class="gamer-g">G</span>amer</h3>
+        </div>
+        <div class="footer-nav">
+            <ul>
+                <li><a href="">Our services</a></li>
+                <li><a href="">Games</a></li>
+                <li><a href="">Web Games</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">My Account</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-icon">
+            <div class="icon">
+                <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+            </div>
+            <div class="icon">
+                <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+            </div>
+            <div class="icon">
+                <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+            </div>
+            <div class="icon">
+                <i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i>
+            </div>
+            <div class="icon">
+                <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+            </div>
+            <div class="icon">
+                <i class="fa-brands fa-apple" style="color: #ffffff;"></i>
+            </div>
+        </div>
+        <div class="copy-right">
+            <p><small>Play Games &copy; Gamer &copy; 2000-2023 Gamer Bangladesh</small></p>
+        </div>
 
     </footer>
     <!-- finish project -->
